--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -18,11 +18,22 @@
 
   transform: translateX(-50%);
 
-  transition: background 200ms ease-in-out;
+  transition-property: background, box-shadow;
+
+  transition: 200ms ease-in-out;
+}
+
+.NavButton:focus {
+  outline: none;
+  box-shadow: 0 0 0 0.25rem var(--main), 0 0 0 0.5rem var(--secondary);
 }
 
 .NavButton[data-open="true"] {
   background: var(--main);
+}
+
+.NavButton[data-open="true"]:focus {
+  box-shadow: 0 0 0 0.25rem var(--secondary), 0 0 0 0.5rem var(--main);
 }
 
 .NavButton::before,
@@ -65,5 +76,51 @@
     position: fixed;
     top: 2rem;
     right: 1rem;
+    animation: dislocate 400ms cubic-bezier(0.175, 0.885, 0.32, 1.1);
+  }
+
+  .NavButton[data-transition="true"] {
+    animation: return 400ms ease-in-out forwards;
+  }
+}
+
+@keyframes dislocate {
+  from {
+    left: 20rem;
+  }
+
+  to {
+    left: calc(100% - 3.5rem);
+  }
+}
+
+@keyframes return {
+  0% {
+    position: fixed;
+    right: 1rem;
+    opacity: 1;
+  }
+
+  50% {
+    top: -4rem;
+    right: 1rem;
+    opacity: 0;
+  }
+
+  51% {
+    top: unset;
+    right: unset;
+    position: relative;
+    opacity: 0;
+    transform: unset;
+    background: var(--secondary);
+  }
+
+  52% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
   }
 }
