--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -18,9 +18,9 @@
 
   transform: translateX(-50%);
 
-  transition-property: background, box-shadow;
+  transition-property: background, box-shadow, opacity;
 
-  transition: 200ms ease-in-out;
+  transition: 300ms ease-in-out;
 }
 
 .NavButton:focus {
@@ -70,6 +70,7 @@
     bottom: unset;
     left: unset;
     position: relative;
+    opacity: 1;
   }
 
   .NavButton[data-open="true"] {
@@ -79,8 +80,9 @@
     animation: dislocate 400ms cubic-bezier(0.175, 0.885, 0.32, 1.1);
   }
 
-  .NavButton[data-transition="true"] {
-    animation: return 400ms ease-in-out forwards;
+  .NavButton[data-transition="true"][data-open="true"] {
+    animation: return 200ms ease-in-out forwards;
+    opacity: 0;
   }
 }
 
@@ -101,26 +103,17 @@
     opacity: 1;
   }
 
-  50% {
-    top: -4rem;
-    right: 1rem;
-    opacity: 0;
-  }
-
-  51% {
-    top: unset;
-    right: unset;
-    position: relative;
-    opacity: 0;
-    transform: unset;
-    background: var(--secondary);
-  }
-
-  52% {
+  99% {
+    right: calc(100% - 20rem);
     opacity: 0;
   }
 
   100% {
-    opacity: 1;
+    top: unset;
+    right: unset;
+    transform: unset;
+    position: relative;
+    opacity: 0;
+    background: var(--secondary);
   }
 }
